<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/nearest_bus_stop"
        android:checkable="true"
        android:icon="@drawable/ic_my_location"
        android:orderInCategory="100"
        android:title="@string/action_nearest_company_model"
        app:showAsAction="always"/>
    <item
        android:id="@+id/search_bus_stop"
        android:checkable="true"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search_company_model"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings"
        android:checkable="true"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/favourite"
        android:checkable="true"
        android:icon="@drawable/ic_favorite_black_48dp"
        android:orderInCategory="100"
        android:title="@string/action_favourite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/street_view"
        android:checkable="true"
        android:icon="@drawable/ic_local_taxi_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_street_view"
        app:showAsAction="always"/>
</menu>
